--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -15,7 +15,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Set version variable
-      run: echo "VERSION=$(echo ${GIT_MESSAGE} | grep -Po '(?<=--version=)[^;]+')" >> $GITHUB_ENV
+      run: echo "VERSION=$(echo ${GIT_MESSAGE} | grep -Po '(?<=::)[^;]+')" >> $GITHUB_ENV
       env:
         GIT_MESSAGE: ${{github.event.head_commit.message}}
 
@@ -43,7 +43,6 @@ jobs:
             username: ${{ secrets.DOCKER_USERNAME }}
             password: ${{ secrets.DOCKER_PASSWORD }}
 
-
     - name: Building the Docker Image
       if: github.ref != 'refs/heads/main'
       run: docker build -t ${{ steps.meta.outputs.tags }}$VERSION .
@@ -52,31 +51,12 @@ jobs:
       if: github.ref != 'refs/heads/main'
       run: docker push ${{ steps.meta.outputs.tags }}$VERSION
 
-
-
-    ## - name: Building the Docker Image with tag
-    #   uses: docker/build-push-action@v2.9.0
-    #   with:
-    #       push: true
-    #       tags: ${{ steps.meta.outputs.tags }}
-    #       file: ./CloudApp/Dockerfile
-
-
-    # - name: Building the Docker Image with dev-tag
-    #   if: github.ref == 'refs/heads/dev'
-    #   uses: docker/build-push-action@v2.9.0
-    #   with:
-    #       push: true
-    #       tags: mikaelaolsson/cloudapp:dev
-    #       file: ./CloudApp/Dockerfile
-
     - name: Building the Docker Image with latest-tag
       if: github.ref == 'refs/heads/main'
       uses: docker/build-push-action@v2.9.0
       with:
           push: true
           tags: mikaelaolsson/cloudapp:latest
-         # file: ./CloudApp/Dockerfile
   
   pull-request:
     if: github.ref == 'refs/heads/dev'
