--- a/.k8s/k8s.yaml
+++ b/.k8s/k8s.yaml
@@ -41,16 +41,22 @@ spec:
     port:  80
     targetPort:  80 
 ---
-apiVersion: autoscaling/v1
+apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
- namespace: default
- name: cloudapp
+  name: cloudapp
+  namespace: default
 spec:
- scaleTargetRef:
-   apiVersion: apps/v1
-   kind: Deployment
-   name: cloudapp
- minReplicas: 1
- maxReplicas: 10
- targetCPUUtilizationPercentage: 50
+  maxReplicas: 10
+  metrics:
+  - resource:
+      name: cpu
+      target:
+        averageUtilization: 25
+        type: Utilization
+    type: Resource
+  minReplicas: 3
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: cloudapp
